@@ -14,6 +14,8 @@ Coding:
 
 	Rearranged option group bits to only require 32 bits on older systems.
 
+	Make gcc happy, replace strncat with "manual" copying
+
 ####################### V 1.7.4.5 (not released):
 
 Corrections:
